# esp32-scummvm

./: configure
.github/: README.md
backends/: module.mk
backends/platform/esp32/: .gitignore  CMakeLists.txt  README.md  esp32.mk  partitions.csv  sdkconfig.defaults
backends/platform/esp32/components/blkcache/: CMakeLists.txt  blkcache.c  blkcache.h
backends/platform/esp32/components/blkcache/test/: CMakeLists.txt
backends/platform/esp32/components/blkcache/test/main/: main.c
backends/platform/esp32/components/hid_ev/: CMakeLists.txt  hid_ev.c  hid_ev.h
backends/platform/esp32/components/scummvm/: CMakeLists.txt  idf_component.yml
backends/platform/esp32/main/: CMakeLists.txt  esp-graphics.cpp  esp-graphics.h  esp-mixer.cpp  esp-mixer.h  esp-mutex.cpp  esp-mutex.h  idf_component.yml  main.cpp  mmc.c  mmc.h  posixesp-fs-factory.cpp  posixesp-fs-factory.h  usb_hid.c  usb_hid.h
